Fix FindBugs errors
svn path=/trunk/; revision=46698


Former-commit-id: 9721829424adf890bf1bb3d83820f58e79cbd80a